--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>Сайт-портфолио</p>
         <img src="avatar.jpg" alt="Екатерина Джежора" class="profile-img">
         <div class="contacts">
-            <p>Email: <a href="mailto:dzhezora.ekaterina@gmail.com">dzhezora.ekaterina@gmail.com</a></p>
-            <p>Telegram: <a href="https://t.me/katzzhena" target="_blank">@katzzhena</a></p>
+            <p>Email: <a href="mailto:dgegora.ekaterina@gmail.com">dgegora.ekaterina@gmail.com</a></p>
+            <p>Telegram: <a href="https://t.me/catreenaa" target="_blank">@catreenaa</a></p>
         </div>
     </header>
 
